coder animacion y gradients

--- a/html1/indexgrid.html
+++ b/html1/indexgrid.html
@@ -7,6 +7,10 @@
     <title>Document</title>
     <link rel="stylesheet" href="/css/grid.css">
     <link rel="stylesheet" href="/css/normalize.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 </head>
 <body>
     <nav id="contenedor">
@@ -133,7 +137,7 @@
     </div>
     <div class="contacto">
         <footer>
-            <h2>contacto</h2>
+            <h2 class=" ">contacto</h2>
             <div class="final">
 <div class="boca">
 <a href=""> <img src="/imagenes/whatsapp_socialnetwork_17360.ico" alt=""></a>
